--- a/static/package.json
+++ b/static/package.json
@@ -9,6 +9,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
     "redux": "^4.0.0",
     "typeface-roboto": "^0.0.54"
@@ -25,6 +26,7 @@
     "@types/react": "^16.4.2",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.3",
+    "@types/react-router-dom": "^4.2.7",
     "typescript": "^2.9.2"
   }
 }
