--- a/static/package.json
+++ b/static/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
+    "reduce-reducers": "^0.3.0",
     "redux": "^4.0.0",
     "typeface-roboto": "^0.0.54"
   },
@@ -27,6 +28,7 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.3",
     "@types/react-router-dom": "^4.2.7",
+    "@types/reduce-reducers": "^0.1.3",
     "typescript": "^2.9.2"
   }
 }
