--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -4,7 +4,11 @@
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": [
+      "es6",
+      "dom",
+      "es2016.array.include"
+    ],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react",
