--- a/static/package.json
+++ b/static/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^1.3.0",
     "@material-ui/icons": "^1.1.0",
+    "iconv-lite": "^0.4.23",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
