--- a/static/package.json
+++ b/static/package.json
@@ -14,6 +14,7 @@
     "react-scripts-ts": "2.16.0",
     "reduce-reducers": "^0.3.0",
     "redux": "^4.0.0",
+    "redux-undo": "^1.0.0-beta9-9-7",
     "typeface-roboto": "^0.0.54"
   },
   "scripts": {
