--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -7,7 +7,8 @@
     "lib": [
       "es6",
       "dom",
-      "es2016.array.include"
+      "es2016.array.include",
+      "es2017.string"
     ],
     "sourceMap": true,
     "allowJs": true,
