--- a/static/package.json
+++ b/static/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^1.3.0",
     "@material-ui/icons": "^1.1.0",
+    "classnames": "^2.2.6",
     "iconv-lite": "^0.4.23",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -24,6 +25,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.6",
     "@types/jest": "^23.1.2",
     "@types/node": "^10.3.6",
     "@types/react": "^16.4.2",
