--- a/static/package.json
+++ b/static/package.json
@@ -16,6 +16,7 @@
     "reduce-reducers": "^0.4.3",
     "redux": "^4.0.0",
     "redux-undo": "^1.0.0-beta9-9-7",
+    "ts-polyfill": "^3.0.1",
     "typeface-roboto": "^0.0.54"
   },
   "scripts": {
