--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -6,9 +6,9 @@
     "target": "es5",
     "lib": [
       "es6",
-      "dom",
       "es2016.array.include",
-      "es2017.string"
+      "es2017.string",
+      "dom"
     ],
     "sourceMap": true,
     "allowJs": true,
