--- a/static/package.json
+++ b/static/package.json
@@ -31,7 +31,7 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/react-redux": "^7.1.16",
-    "marked": "^4.0.3",
+    "marked": "3.0.8",
     "typescript": "^4.2.4"
   }
 }
