--- a/static/package.json
+++ b/static/package.json
@@ -3,35 +3,72 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.12",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.20",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "classnames": "^2.3.1",
-    "iconv-lite": "^0.6.2",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "iconv-lite": "^0.6.3",
+    "marked": "^4.0.7",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^6.0.2",
-    "react-scripts-ts": "3.1.0",
-    "reduce-reducers": "^1.0.4",
-    "redux": "^4.1.0",
-    "redux-undo": "^1.0.0-beta9-9-7",
-    "ts-polyfill": "^3.0.1",
-    "typeface-roboto": "^1.1.13"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.1.0",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-undo": "^1.0.1",
+    "ts-polyfill": "^3.8.2",
+    "typeface-roboto": "^1.1.13",
+    "typescript": "^4.5.3"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject",
-    "readme": "marked ../README.md --gfm -o ../pulp-scheduling-v0.1.13/README.html"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "readme": "marked ../README.md --gfm -o ../pulp-scheduling-v0.1.13/README.html",
+    "format": "prettier . --check",
+    "format:fix": "prettier . --write",
+    "lint": "eslint ./src/**/*.{ts,tsx}",
+    "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
+    "prepare": "cd .. && husky install static/.husky"
   },
-  "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.9",
-    "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-redux": "^7.1.16",
-    "marked": "4.0.4",
-    "typescript": "^4.2.4"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "testMatch": [
+      "**/__tests__/**/*.{js,jsx,ts,tsx}",
+      "**/*.{spec,test}.{js,jsx,ts,tsx}"
+    ]
   }
 }
