--- a/static/package.json
+++ b/static/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
+    "buffer": "^6.0.3",
     "fp-ts": "^2.11.5",
     "husky": "^7.0.4",
     "iconv-lite": "^0.6.3",
