--- a/static/package.json
+++ b/static/package.json
@@ -32,7 +32,8 @@
     "redux-undo": "^1.0.1",
     "ts-polyfill": "^3.8.2",
     "typeface-roboto": "^1.1.13",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "use-immer": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
