--- a/static/package.json
+++ b/static/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
     "buffer": "^6.0.3",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
     "fp-ts": "^2.11.5",
     "husky": "^7.0.4",
     "iconv-lite": "^0.6.3",
@@ -58,6 +59,9 @@
       "plugin:react-hooks/recommended",
       "plugin:@typescript-eslint/recommended"
     ],
+    "plugins": [
+      "sort-keys-fix"
+    ],
     "rules": {
       "@typescript-eslint/ban-ts-comment": [
         "error",
@@ -73,7 +77,8 @@
             "order": "asc"
           }
         }
-      ]
+      ],
+      "sort-keys-fix/sort-keys-fix": "error"
     }
   },
   "browserslist": {
