--- a/static/package.json
+++ b/static/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
     "buffer": "^6.0.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "fp-ts": "^2.11.5",
     "husky": "^7.0.4",
@@ -60,6 +61,7 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "plugins": [
+      "prefer-arrow",
       "sort-keys-fix"
     ],
     "rules": {
@@ -78,6 +80,7 @@
           }
         }
       ],
+      "prefer-arrow/prefer-arrow-functions": "error",
       "sort-keys-fix/sort-keys-fix": "error"
     }
   },
