add arrow-body-style to eslint rules

--- a/static/package.json
+++ b/static/package.json
@@ -71,6 +71,7 @@
           "ts-ignore": "allow-with-description"
         }
       ],
+      "arrow-body-style": "error",
       "import/order": [
         "error",
         {
