add curly to eslint rules

--- a/static/package.json
+++ b/static/package.json
@@ -72,6 +72,10 @@
         }
       ],
       "arrow-body-style": "error",
+      "curly": [
+        "error",
+        "multi"
+      ],
       "import/order": [
         "error",
         {
