--- a/static/package.json
+++ b/static/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.20",
     "buffer": "^6.0.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react-memo": "^0.0.3",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "fp-ts": "^2.11.5",
     "husky": "^7.0.4",
@@ -62,6 +63,7 @@
     ],
     "plugins": [
       "prefer-arrow",
+      "react-memo",
       "sort-keys-fix"
     ],
     "rules": {
@@ -86,6 +88,7 @@
         }
       ],
       "prefer-arrow/prefer-arrow-functions": "error",
+      "react-memo/require-memo": "error",
       "sort-keys-fix/sort-keys-fix": "error"
     }
   },
