--- a/environment.yml
+++ b/environment.yml
@@ -5,11 +5,4 @@ dependencies:
   - pip=21.2.4=py39haa95532_0
   - python=3.9.7=h6244533_1
   - pip:
-    - black==21.12b0
-    - flask==2.0.2
-    - json-rpc==1.13.0
-    - mypy==0.930
-    - psutil==5.8.0
-    - pulp==2.6.0
-    - pyinstaller==4.7
-    - tornado==6.1
+    - -r requirements.txt
