yarn add react-i18next i18next

--- a/static/package.json
+++ b/static/package.json
@@ -22,12 +22,14 @@
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "fp-ts": "^2.11.5",
     "husky": "^7.0.4",
+    "i18next": "^21.6.5",
     "iconv-lite": "^0.6.3",
     "io-ts": "^2.2.16",
     "marked": "^4.0.8",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
