--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-  "python.formatting.provider": "black",
-  "python.linting.mypyEnabled": true,
-  "python.linting.enabled": true
+  "python.formatting.provider": "black"
 }
