--- a/environment.yml
+++ b/environment.yml
@@ -5,4 +5,4 @@ dependencies:
   - pip=21.2.4=py39haa95532_0
   - python=3.9.7=h6244533_1
   - pip:
-    - -r requirements.txt
+    - -r src/requirements.txt
