add cache settings

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
+          cache: yarn
+          cache-dependency-path: static/yarn.lock
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
